fixing background to stretch

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,6 +7,7 @@ html {
   background-image: url("../images/the-flatiron-building.png");
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
 }
 
 h1 {
@@ -37,6 +38,7 @@ h3 {
   background-image: url("../images/the-flatiron-building.png");
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
   font-size: 23px;
   color: white
 }
